# GC-Mass-Loss

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: mw_gc_parameters_orbital_structural_time.ecsv
notebooks/current/: pal5_stream_simulation.ipynb
notebooks/experiments/: add_king_w0.ipynb
scripts/: basic.py  create_stream_pal5.py  gc_example.py  run_nbody_pal5.py  validate_nbody_orbit_pal5.py  validate_orbit_pal5.py
src/streamcutter/: coordinate.py  gc.py  nbody.py  stream_generator.py
tests/: test_gc.py  test_nbody.py  test_stream_generator.py
